# template_search_project

./: .env.example  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  README.md  STANDALONE.md  TODO.md  codemeta.json  coverage_project.json  domain_profile.yaml  experiment_plan.yaml  export.toml  pyproject.toml  review_config.yaml
.agents/skills/: AGENTS.md
data/: AGENTS.md  README.md  claim_ledger.yaml  corpus.json
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  faq.md  output_conventions.md  quickstart.md  rendering_pipeline.md  style_guide.md  syntax_guide.md  testing_philosophy.md  troubleshooting.md
manuscript/: 00_abstract.md  01_introduction.md  03_results.md  04_conclusion.md  05_pipeline_internals.md  06_reproducibility.md  07_deep_search.md  99_references.md  AGENTS.md  README.md  S01_literature_review.md  SYNTAX.md  config.yaml  config.yaml.example  layer_contract.yaml  preamble.md  references_deep.bib
output/: corpus.json  enrichment_log.json  reading_report.md  run_summary.json
output/data/: dashboard_payload.json  manuscript_variables.json
output/figures/: figure_registry.json
output/manuscript/: 00_abstract.md  01_introduction.md  02_methodology.md  03_results.md  04_conclusion.md  05_pipeline_internals.md  06_reproducibility.md  07_deep_search.md  99_references.md  AGENTS.md  README.md  S01_literature_review.md  SYNTAX.md  config.yaml  references.bib
output/pdf/: _combined_manuscript.aux  _combined_manuscript.bbl  _combined_manuscript.blg  _combined_manuscript.md  _combined_manuscript.tex  _combined_manuscript.toc  references_deep.bib
output/reports/: artifact_manifest.json  dashboard_invariants.txt  dashboard_summary.txt  evidence_registry.json  output_statistics.json  output_statistics.txt  test_results.json  test_results.md  validation_report.json  validation_report.md
output/review/: REVIEW_REPORT.md  stage_bibliography_completeness.json  summary.json  (+3 more)
scripts/: AGENTS.md  README.md  review  run_deep_search.py  run_search_pipeline.py  s_compose_literature_review.py  y_generate_search_figures.py  z_generate_manuscript_variables.py  zz_generate_review_report.py  zzz_build_dashboard.py
src/: AGENTS.md  README.md  __init__.py  analysis.py  composition.py  config.py  dashboard.py  deep_search.py  deep_search_cli.py  dotenv.py  figures.py  llm_runtime.py  manuscript_variables.py  pipeline.py  report.py  review_report.py  search_invariants.py  search_pipeline_cli.py  synthesis.py
template_search_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: AGENTS.md  README.md  conftest.py  test_analysis.py  test_composition.py  test_composition_script.py  test_config.py  test_dashboard.py  test_deep_improvements.py  test_deep_search.py  test_deep_search_cli.py  test_dotenv.py  test_figures.py  test_llm_runtime.py  test_manuscript_integrity.py  test_manuscript_variables.py  test_pipeline.py  test_pipeline_collisions.py  test_pipeline_integration.py  test_readme_config_consistency.py  test_report.py  test_review_report.py  test_review_report_additional.py  test_script_order.py  test_scripts.py  test_search_invariants_and_dashboard.py  test_search_pipeline_cli.py  test_synthesis.py
(+79 files in other folders)
